# 2.0.5.1 (2020-06-11)
- spec: fix grep breakage in 2.0.5 release
- spec, refresh and update now leave newly prepped source tree around

# 2.0.5 (2020-06-10)
- spec --tests flag to force enabling testsuite
- spec: fix permissions of extra-source-files
- update url for Fedora Haskell Packaging Guidelines (TristanCacqueray)
- make cabal update silent and check for 01-index
- support Cabal-3.2 ShortText (hekkaidekapus)
- use simple-cmd-args 0.1.6 for working subcommand help
- improve handling of update --stream for subpackaging
- default to Stackage LTS 15
- spec: exclude deps dropped with cabal-tweak-drop-dep

# 2.0.4 (2020-02-27) Fedora 32
- update: also unbreak patching

# 2.0.3 (2020-02-24)
- refresh: unbreak to patch spec file
- spec: detect local revised .cabal file

# 2.0.2 (2020-02-20)
- drop %_devel compat macro
- default stream is now lts-14
- sort deps of subpackages
- metapkgs don't have prof or doc
- fix generation of subpackages for a new package
- update: logic reworked to reduce redundant downloads

# 2.0.1 (2020-02-06)
- quote macros in commented fields
- read --subpackage from spec header
- generate BRs for subpackages

# 2.0.0 (2020-01-16)
- major refactor to handle stream/pkgid more precisely and correctly
  (hence major version bump due to behavior changes)
  - eg can no longer specify both stream and pkg-ver
- check for package first in default LTS, then latest LTS, and Nightly,
  before Hackage
- respect and read/write --standalone and --stream in spec header consistently
  (note default LTS stream is not written to header)
- fix infinite loop for 'install'
- optionally use libcurl binding instead of former stackage-query fallback

# 1.0.3 (2019-12-31)
- define %_devel for f30 packaging compatibility
- missingdeps and builddep fixes
- --standalone: add BRs for deps of missing deps

# 1.0.2 (2019-12-09)
- allow newer time for ghc-8.8
- more type refactoring: PackageIdentifier, LibPkgType, RpmPackage
  and some associated bugfixes
