@@ -1,6 +1,7 @@
 # 2.0.5.1 (2020-06-11)
 - spec: fix grep breakage in 2.0.5 release
 - spec, refresh and update now leave newly prepped source tree around
+- spec: dropped deprecated %post and %postun scriptlets
 
 # 2.0.5 (2020-06-10)
 - spec --tests flag to force enabling testsuite
